--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "webpack,react,ts",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --open --config config/development.js",
-    "build": "webpack --config config/production.js"
+    "start": "webpack-dev-server --open --config config/dev.js",
+    "build": "webpack --config config/prod.js"
   },
   "author": "Jasmine",
   "license": "ISC",
@@ -18,12 +18,15 @@
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@types/react": "^18.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
